# Spec-Driven-To-Do

./: CLAUDE.md  README.md
.claude/: settings.local.json
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: CLAUDE.md  pyproject.toml
backend/src/: main.py
backend/src/models/: task_enum.py
backend/src/phase1_console_todo_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: CLAUDE.md
history/prompts/001-console-todo-app/: 1-create-spec.spec.prompt.md  2-create-plan.plan.prompt.md  3-create-tasks.tasks.prompt.md  4-implement-ph1-foundational.implementation.prompt.md  5-update-spec-import-constraints.spec.prompt.md
history/prompts/002-phase2-migration/: 1-create-spec.spec.prompt.md  2-create-plan.plan.prompt.md  3-create-tasks.tasks.prompt.md  4-execute-migration.implementation.prompt.md
history/prompts/constitution/: 1-create-constitution.constitution.prompt.md
specs/: 02_phase2_migration.md  overview.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: cli-interface.md
specs/002-phase2-migration/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/api/: example_api_spec.md
specs/database/: example_db_schema.md
specs/features/: 01_phase1_console_app.md
specs/ui/: example_ui_spec.md
src/models/: task.py
src/phase1_console_todo_app.egg-info/: PKG-INFO  SOURCES.txt
src/services/: todo_service.py
src/ui/: console_ui.py
(+1 files in other folders)
